# SignalFlux

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
assets/examples/: demo_report.html
config/: README.md  default.json  macro.json  risk.json  short_term.json
docs/: guide.md  plans.md  schema_guide.md
logs/: failed_json_20251228_151316.txt  failed_json_20251228_151343.txt  failed_json_20251228_151406.txt  failed_json_20251228_151438.txt  failed_json_20251228_151522.txt  failed_json_20251228_151537.txt  failed_json_20251228_151549.txt  failed_json_20251228_151608.txt  failed_json_20251228_151618.txt  failed_json_20251228_151722.txt  failed_json_20251228_152021.txt  failed_json_20251228_152031.txt  failed_json_20251228_152428.txt  failed_json_20251228_152459.txt  failed_json_20251228_152630.txt  failed_json_20251228_152847.txt  failed_json_20251228_153008.txt  failed_json_20251228_153104.txt  failed_json_20251228_153132.txt  failed_json_20251228_153306.txt  failed_json_20251228_154324.txt  failed_json_20251228_154525.txt
logs/json/: failed_json_20251228_125140.txt  failed_json_20251228_125216.txt  failed_json_20251228_125240.txt  failed_json_20251228_125305.txt  failed_json_20251228_125336.txt  failed_json_20251228_125409.txt  failed_json_20251228_125440.txt  failed_json_20251228_125528.txt  failed_json_20251228_125604.txt  failed_json_20251228_125627.txt  failed_json_20251228_125710.txt  failed_json_20251228_125736.txt
src/: main_flow.py
src/agents/: __init__.py  fin_agent.py  forecast_agent.py  (+3 more)
tests/: verify_stock_data_context_v2.py
(+30 files in other folders)
